--- a/.gitmodules
+++ b/.gitmodules
@@ -41,7 +41,7 @@
 [submodule "src/code.cloudfoundry.org/nfsv3driver"]
 	path = src/code.cloudfoundry.org/nfsv3driver
 	url = https://github.com/orange-cloudfoundry/nfsv3driver
-	branch = master
+	branch = add_NFS_options
 [submodule "src/github.com/bmizerany/pat"]
 	path = src/github.com/bmizerany/pat
 	url = https://github.com/bmizerany/pat
@@ -85,7 +85,7 @@
 [submodule "src/code.cloudfoundry.org/nfsbroker"]
 	path = src/code.cloudfoundry.org/nfsbroker
 	url = https://github.com/orange-cloudfoundry/nfsbroker
-	branch = master
+	branch = add_NFS_options
 [submodule "src/github.com/lib/pq"]
 	path = src/github.com/lib/pq
 	url = https://github.com/lib/pq
